fix: some TODOs and minor bugs